package inf112.skeleton.app;

public class Card {
    private CardType cardType;


    public Card(CardType cardType){
        this.cardType = cardType;
    }



    public CardType getCardType() {
        return cardType;
    }
}
