package inf112.skeleton.app;

public enum CardType {
    FORWARDONE,
    FORWARDTWO,
    TURNLEFT,
    TURNRIGHT,
    UTURN
}
