package inf112.skeleton.app.game.objects;

public enum Direction {
    NORTH,
    SOUTH,
    EAST,
    WEST
}
